trunk/Archive2/eb/309b55afadc3f5/output
main.cpp: In function 'int main()':
main.cpp:19:27: error: no matching function for call to 'std::list<int>::splice(int&, std::list<int>&)'
     list1.splice(it, list2);
                           ^
main.cpp:19:27: note: candidates are:
In file included from /usr/include/c++/4.8/list:63:0,
                 from main.cpp:2:
/usr/include/c++/4.8/bits/stl_list.h:1248:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list&& __x)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1248:7: note:   no known conversion for argument 1 from 'int' to 'std::list<int>::iterator {aka std::_List_iterator<int>}'
/usr/include/c++/4.8/bits/stl_list.h:1263:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list& __x)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1263:7: note:   no known conversion for argument 1 from 'int' to 'std::list<int>::iterator {aka std::_List_iterator<int>}'
/usr/include/c++/4.8/bits/stl_list.h:1278:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&&, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list&& __x, iterator __i)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1278:7: note:   candidate expects 3 arguments, 2 provided
/usr/include/c++/4.8/bits/stl_list.h:1296:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list& __x, iterator __i)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1296:7: note:   candidate expects 3 arguments, 2 provided
/usr/include/c++/4.8/bits/stl_list.h:1314:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&&, std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list&& __x, iterator __first,
       ^
/usr/include/c++/4.8/bits/stl_list.h:1314:7: note:   candidate expects 4 arguments, 2 provided
/usr/include/c++/4.8/bits/stl_list.h:1332:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&, std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list& __x, iterator __first, iterator __last)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1332:7: note:   candidate expects 4 arguments, 2 provided
main.cpp:24:55: error: no matching function for call to 'std::list<int>::splice(std::list<int>::iterator, std::list<int>&, int&, std::list<int>::iterator)'
     list2.splice(list2.begin(), list1, it, list1.end());
                                                       ^
main.cpp:24:55: note: candidates are:
In file included from /usr/include/c++/4.8/list:63:0,
                 from main.cpp:2:
/usr/include/c++/4.8/bits/stl_list.h:1248:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list&& __x)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1248:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/4.8/bits/stl_list.h:1263:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list& __x)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1263:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/4.8/bits/stl_list.h:1278:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&&, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list&& __x, iterator __i)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1278:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/4.8/bits/stl_list.h:1296:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list& __x, iterator __i)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1296:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/4.8/bits/stl_list.h:1314:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&&, std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list&& __x, iterator __first,
       ^
/usr/include/c++/4.8/bits/stl_list.h:1314:7: note:   no known conversion for argument 3 from 'int' to 'std::list<int>::iterator {aka std::_List_iterator<int>}'
/usr/include/c++/4.8/bits/stl_list.h:1332:7: note: void std::list<_Tp, _Alloc>::splice(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>&, std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       splice(iterator __position, list& __x, iterator __first, iterator __last)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1332:7: note:   no known conversion for argument 3 from 'int' to 'std::list<int>::iterator {aka std::_List_iterator<int>}'
